Fix video occupying too much space

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,7 +1,3 @@
-.primary-display {
+.primary-display, .timeline {
   height: 100%;
-}
-
-.timeline {
-  width: 100%;
 }
