--- a/src/app/video/video.component.scss
+++ b/src/app/video/video.component.scss
@@ -5,5 +5,5 @@ video {
 }
 
 .video-wrapper {
-  height: 100vh;
+  max-width: 100%;
 }
